# cRUSTacean

./: README.md
hello/: .gitignore  Cargo.toml  README.md
hello/src/: caca.txt  main.rs  myser.rs
hello/src/static/: index.html
