[package]
name = "labs2024"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
zip = "0.6.6"
mimalloc = { version = "*", default-features = false }
eyre = "0.6.12"
tokio = "1.37.0"
okapi = "0.7.0"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
swagger-ui = "0.1.5"
swagger = "6.4.1"
jsonschema = "0.18.0"
schemars = "0.8.20"
clippy = "0.0.302"
rmp-serde = "1.3.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]


[profile.release]
debug = true

